Fixed miss alignment, added gradients and texts to each sub site

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -28,7 +28,7 @@ footer, header, hgroup, menu, nav, section {
   display: block;
 }
 body {
-  line-height: 1;
+  background: #293f50;
   color: #888;
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -138,11 +138,21 @@ p a {
   border-radius: 5px;
   display: inline-block;
   margin: 0;
+  color: #fff;
+  cursor: pointer;
+  font-weight: 400px;
+  letter-spacing: .5px;
+  text-transform: uppercase;
 }
 
 .btn-alt {
-  border: 1px solid #dfe2e5;
+  border: 1px solid #fff;
   padding: 10px 30px;
+}
+
+.btn-alt:hover {
+  background: #fff;
+  color: #648880;
 }
 
 /*
@@ -155,6 +165,7 @@ p a {
   line-height: 44px;
   padding: 22px 80px 66px 80px;
   text-align: center;
+  color: #fff;
 }
 
 .hero h2 {
@@ -219,6 +230,16 @@ p a {
   color: #648880;
 }
 
+.primary-header a,
+.primary-footer a {
+  color: #fff;
+}
+
+.primary-header a:hover,
+.primary-footer a:hover{
+  color: #648880;
+}
+
 .col-1-3 {
   width: 33.33%;
 }
@@ -267,4 +288,31 @@ p a {
 
 .nav {
   text-align: right;
+}
+
+.row,
+.row-alt {
+  min-width: 960px;
+}
+
+.row {
+  background: #fff;
+  padding: 66px 0 44px 0;
+}
+
+.row-alt {
+  background: #cbe2c1;
+  background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background: linear-gradient(to right, #a1d3b0, #f6f1d3);
+  padding: 44px 0 22px 0;
+}
+
+.lead {
+  text-align: center;
+}
+
+.lead p {
+  font-size: 21px;
+  line-height: 33px;
 }
